--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 :root {
     --text-color: #DBE4EF;
-    --card-front-color:#640D5F;
+    --card-front-color:#F05A7E;
     --card-back-color: #9DBDFF;
 }
 
